# file-fairy

./: .gitignore  Cargo.toml  LICENSE  README.md  ai_module.py  aifo.py  cli.py  main.py  main_gui.py  package.json  pyproject.toml  requirements.txt  smart_file_organizer.py  svelte.config.js
api/: __init__.py  endpoints.py
backend/: server.py
backend/api/: endpoints.py
backend/core/: database.py  indexer.py  renamer.py  search.py  watcher.py
backend/utils/: file_parser.py  llm.py
core/: __init__.py  database.py  indexer.py  renamer.py  search.py  watcher.py
file-fairy-cli/: Cargo.toml  README.md
file-fairy-cli/src/: args.rs  config.rs  error.rs  main.rs
file-fairy-cli/src/commands/: info.rs  mod.rs  organize.rs  registry.rs  scan.rs
file-fairy-core/: Cargo.toml  README.md
file-fairy-core/src/: config.rs  error.rs  file_category.rs  lib.rs
file-fairy-core/src/info/: features.rs  formats.rs  formatter.rs  mod.rs  models.rs  system.rs  version.rs
file-fairy-core/src/organize/: action.rs  mod.rs  options.rs  results.rs  service.rs
file-fairy-core/src/scan/: mod.rs  options.rs  results.rs  scanner.rs  stats.rs
file-fairy-extractors/: Cargo.toml  README.md
file-fairy-extractors/src/: error.rs  hwp.rs  lib.rs  office.rs  pdf.rs  text.rs  traits.rs
file-fairy-llm/: Cargo.toml  README.md
file-fairy-llm/examples/: local_client_example.rs
file-fairy-llm/src/: client.rs  config.rs  constants.rs  error.rs  lib.rs
file_fairy/: __init__.py  cli.py  constants.py  message_creator.py  utils.py
file_fairy/core/: __init__.py  ai_processor.py  config.py  file_utils.py  organizer.py
file_fairy/extractors/: data_extractors.py  hwp_extractor.py  office_extractors.py  pdf_extractor.py  text_extractor.py
fileio_utils/: __init__.py  constants.py  message_creator.py
fileio_utils/extractors/: __init__.py  base.py
frontend/: package.json  svelte.config.js
frontend/src/: app.css  app.html
frontend/src/lib/components/atoms/: drop-overlay.svelte  icon.svelte  text.svelte
frontend/src/lib/components/molecules/: action-buttons.svelte  card-header.svelte  file-tree-item.svelte  index.ts  no-results.svelte  search-input.svelte  search-result-item.svelte  watch-button.svelte  watched-folder-item.svelte
frontend/src/lib/components/organisms/: index.ts  magic-bar.svelte  organize-results.svelte  search-results.svelte  watch-folder-modal.svelte
frontend/src/lib/components/templates/: index.ts
frontend/src/lib/types/: components.ts
frontend/src/routes/: +page.svelte
models/: __init__.py  schema.py
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs  ollama.rs  types.rs
src-tauri/src/extractors/: error.rs  hwp.rs  mod.rs  office.rs  pdf.rs  text.rs  traits.rs
src-tauri/src/services/: database.rs  db.rs  extraction.rs  filesystem.rs  mod.rs  ollama.rs  organization.rs  renamer.rs  watch.rs
src/lib/components/: index.ts
src/lib/components/atoms/: drop-overlay.svelte  index.ts  spinner.svelte  text.svelte
src/lib/components/molecules/: card-container.svelte  card-header.svelte  file-rename-preview.svelte  file-tree-item.svelte  index.ts  progress-display.svelte  search-input.svelte  search-result-item.svelte  watch-button.svelte  watched-folder-item.svelte
src/lib/components/organisms/: index.ts  magic-bar.svelte  organize-modal.svelte  organize-results.svelte  search-results.svelte  watch-folder-modal.svelte
src/lib/components/templates/: main-layout.svelte
src/lib/services/: file-organization.ts  index.ts  ollama.ts  tauri-api.ts  use-file-organization.ts  watch-store.ts
src/lib/stores/: watchedFolders.ts
src/lib/types/: components.ts
src/routes/: +page.svelte
utils/: __init__.py  clustering.py  db.py  embedding.py  file_parser.py  file_watcher.py  llm.py  ollama.py
web/: index.html  script.js  styles.css
