[project]
name = "file-fairy"
version = "0.1.0"
description = "Local file organizing application with AI-powered features"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "pydantic>=2.0.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "pymupdf>=1.26.3",
    "python-docx>=1.2.0",
    "docx2txt>=0.9",
    "openpyxl>=3.1.5",
    "xlrd>=2.0.2",
    "python-pptx>=1.0.2",
    "olefile>=0.47",
    "llama-cpp-python>=0.3.16",
    "lancedb>=0.24.3",
    "sentence-transformers>=5.1.0",
]
