[package]
name = "file-fairy-llm"
version.workspace = true
edition.workspace = true

[features]
default = []
cuda = ["llama-cpp-2/cuda"]
vulkan = ["llama-cpp-2/vulkan"]

[dependencies]
llama-cpp-2 = { version = "0.1" }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
encoding_rs = "0.8"